WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210503
Scroll snap in subframes is often broken
https://bugs.webkit.org/show_bug.cgi?id=210503
Summary
Scroll snap in subframes is often broken
Simon Fraser (smfr)
Reported
2020-04-14 10:09:47 PDT
Scroll snap in subframes is often broken
Attachments
Patch
(10.42 KB, patch)
2020-04-14 10:11 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-04-14 10:11:04 PDT
Created
attachment 396433
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2020-04-14 10:12:29 PDT
<
rdar://problem/61777180
>
EWS
Comment 3
2020-04-14 12:05:40 PDT
Committed
r260086
: <
https://trac.webkit.org/changeset/260086
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 396433
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug