Scroll snap in subframes is often broken https://bugs.webkit.org/show_bug.cgi?id=210503

Reviewed by Darin Adler.

Source/WebCore:

RenderBox::findEnclosingScrollableContainer() incorrectly consulted the scrollability
of the main frame, causing snapping in subframes to be broken any time the main frame
was not scrollable.

Test: tiled-drawing/scrolling/scroll-snap/scroll-snap-async-iframe.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::findEnclosingScrollableContainer const):

LayoutTests:

* tiled-drawing/scrolling/scroll-snap/scroll-snap-async-iframe-expected.txt: Added.
* tiled-drawing/scrolling/scroll-snap/scroll-snap-async-iframe.html: Added.


Canonical link: https://commits.webkit.org/223381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260086 268f45cc-cd09-0410-ab3c-d52691b4dbfc