Source/WebCore/rendering/RenderBox.cpp
@@ -5008,7 +5008,8 @@ const RenderBox* RenderBox::findEnclosingScrollableContainer() const
             return &candidate;
     }
     // If all parent elements are not overflow scrollable, check the body.
-    if (document().body() && frame().mainFrame().view() && frame().mainFrame().view()->isScrollable())
+    // FIXME: We should not treat the body as the scrollable element (see webkit.org/b/210469).
+    if (document().body() && frame().view() && frame().view()->isScrollable())
         return document().body()->renderBox();
     
     return nullptr;
